Make svg reset it's size each time it's called in order to avoid overflow

--- a/app/assets/stylesheets/volunteer.css
+++ b/app/assets/stylesheets/volunteer.css
@@ -1,5 +1,4 @@
 #svgContainer { 
-	display: none;
 	position:absolute;
 	z-index: -10;	
 }
